--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<div style="font-size: 8vw; text-align: center;">slay. drink responsibly.</div>
+<div style=" font-size: 8vw; text-align: center;">slay . drink responsibly. </div><img style="filter: invert(13%) sepia (67%) saturate (7202%6) hue-rotate (348deg) brightness (82%) contrast (101%) ;" src="dragon.svg" width=" 100%" height="100%" />
